--- a/src/Charting.fsproj
+++ b/src/Charting.fsproj
@@ -15,8 +15,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
-    <PackageReference Include="WebSharper" Version="4.2.8.255" />    
-    <PackageReference Include="WebSharper.FSharp" Version="4.2.8.255" />
-@packages@  </ItemGroup>
+    <PackageReference Include="WebSharper" Version="4.5.1.304" />    
+    <PackageReference Include="WebSharper.FSharp" Version="4.5.1.304" />
+    <PackageReference Include="WebSharper.Charting" Version="4.5.0.221" />
+    <PackageReference Include="WebSharper.ChartJs" Version="4.5.0.138" />
+    <PackageReference Include="WebSharper.Reactive" Version="4.5.0.129" />
+    <PackageReference Include="WebSharper.UI" Version="4.5.1.141" />
+  </ItemGroup>
 
 </Project>
